--- a/CemeteryThings/index.html
+++ b/CemeteryThings/index.html
@@ -1,5 +1,6 @@
 <canvas id = screen height = 640 width = 640></canvas>
 
+<script src="deque.js"></script>
 <script src="basic.js"></script>
 <script src="parameters.js"></script>
 <script src="classes.js"></script>
